@@ -4,6 +4,7 @@ import com.aux.provider.filters.CustomAuthenticationFilter;
 import com.aux.provider.filters.CustomAuthorizationFilter;
 import com.aux.provider.filters.TokenFilter;
 import lombok.RequiredArgsConstructor;
+import lombok.var;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -18,6 +19,8 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.http.HttpMethod.*;
@@ -62,12 +65,13 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
         http.addFilter(filter);
         http.addFilterBefore(new CustomAuthorizationFilter(new TokenFilter()), UsernamePasswordAuthenticationFilter.class);
 
+
         //Configuracion de los cors
         http.cors().configurationSource(request -> {
-            CorsConfiguration cors = new CorsConfiguration();
-            cors.setAllowedOrigins(List.of("http://localhost:4200", "http://127.0.0.1:80", "*"));
-            cors.setAllowedMethods(List.of("GET","POST", "PUT", "DELETE", "OPTIONS"));
-            cors.setAllowedHeaders(List.of("*"));
+            var cors = new CorsConfiguration();
+            cors.setAllowedOrigins(Arrays.asList("http://localhost:4200", "http://127.0.0.1:80", "*"));
+            cors.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "OPTIONS"));
+            cors.setAllowedHeaders(Arrays.asList("*"));
             return cors;
         });
 
